2.12.0/todo/result_export.md

# Release Notes worksheet export

You should:

1. ensure commit categorization is correct
2. write up major features, bc-breaking changes, deprecations in detail
3. summarize the other sections

## 1. Ensure commit categorization is correct

* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## 2. Major features, BC-breaking changes, deprecations

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.

## 3. Summarize the other sections

For the other sections (improvements, bug fixes, performance, documentation, developers, not user facing) - use your
judgement to summarize the key PRs. You do not need to make every commit description perfect
(changed in v2.10 to simplify the process).

Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

Feel free to use https://github.com/pytorch/pytorch/releases/tag/v2.10.0 as an example.

## export
### bc breaking
- Speed up torch.export.save by skipping duplicate tensor serialization ([#176880](https://github.com/pytorch/pytorch/pull/176880))
### deprecation
### new features
### improvements
### bug fixes
- [MPS] Fix SDPA meta shapes to avoid dynamic seq guards ([#177620](https://github.com/pytorch/pytorch/pull/177620))
### performance
### docs
### devs
### Untopiced
- [nativert]additional input/output types for nativert graph serialization ([#174707](https://github.com/pytorch/pytorch/pull/174707))
- [BE][Export] Apply pep604 to export files ([#175688](https://github.com/pytorch/pytorch/pull/175688))
- [export] Handle unused List[Tensor] outputs in serialization ([#176677](https://github.com/pytorch/pytorch/pull/176677))
- Add nested float serialize/deserialize support (#178081) ([#178081](https://github.com/pytorch/pytorch/pull/178081))
- [PT2][export] Fix unflatten KeyError for @N-suffixed module FQNs (#179278) ([#179278](https://github.com/pytorch/pytorch/pull/179278))
### not user facing
- [opaque obj] Fix check ([#175883](https://github.com/pytorch/pytorch/pull/175883))
- Fix running decompositions on ep with ops that have nested tensor list args ([#176355](https://github.com/pytorch/pytorch/pull/176355))
- Skip quantile q-value validation for tensor subclass-like inputs ([#174859](https://github.com/pytorch/pytorch/pull/174859))
- Fix torch.export DDE in run_decompositions (#178076) ([#178076](https://github.com/pytorch/pytorch/pull/178076))
### security
